<resources>
    <string name="app_name">CheckMe</string>
    <string name="action_settings">הגדרות</string>
    <string name="title_activity_maps">מפות</string>
    <string name="title_chat">פטפוטים</string>
    <string name="title_activity_sign_up">הירשם</string>
    <string name="title_activity_login_group">קבוצות</string>
    <string name="next_create_group">הבא</string>
    <string name="sign_up"> הרשמה</string>
    <string name="title_activity_signup">הירשם</string>
    <string name="sign_up_toolbar">התחברות</string>
    <string name="firstNameField">שם פרטי</string>
    <string name="lastNameField">שם משפחה</string>
    <string name="newGroupNameField">הכנס שם קבוצה</string>
    <string name="emailField">דוא"ל</string>
    <string name="upload_picture">תמונה נוספה</string>
    <string name="usernameField">שם משתמש</string>
    <string name="passwordField">סיסמה</string>
    <string name="birthdayField">יום הולדת</string>
    <string name="maleButton">זכר</string>
    <string name="femaleButton">נקבה</string>
    <string name="signUpButton">הירשם</string>
    <string name="addGroupButton">צור קבוצה חדשה</string>
    <string name="finishButton">סיים</string>
    <string name="facebook_app_id">275237872845235</string>
    <string name="com_facebook_loginview_log_out_button">התנתק</string>
    <string name="com_facebook_loginview_log_in_button">התחבר</string>
    <string name="com_facebook_loginview_log_in_button_long">Login with Facebook</string>
    <string name="title_activity_create_new_group">צור קבוצה חדשה</string>
    <string name="logout">התנתק</string>
    <string name="phone_verification_toolbar">אימות</string>
    <string name="phone_verification_subtitle">\n\nאמת את מספר הטלפון שלך</string>
   <string name="phone_verification_body">הכנס את מספר הטלפון שלך שתוכל לתחבר לאפליקציה</string>
    <string name="phone_verification_verify_body">CheckMeהכנס את קוד האימות שקיבלת מ</string>
    <string name="title_activity_phone_verification_send">PhoneVerificationSend</string>
    <string name="send_sms">שלח מסרון</string>
    <string name="verify">אמת את הטלפון</string>
    <string name="title_activity_getting_all_group">קבוצות</string>
    <string name="error_field_not_empty">השדה הזה לא יכול להיות ריק</string>
    <string name="error_phone_num_invalid">מספר הטלפון הזה לא תקין</string>
    <string name="listofphones">List_item</string>
    <string name="addUsersButton">הוסף משתמשים</string>
    <string name="removeUsersButton">הסר משתמשים</string>
    <string name="title_activity_add_users_to_group">AddUsersToGroupActivity</string>
    <string name="title_activity_remove_users_from_group">RemoveUsersFromGroupActivity</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>
    <string name="title_manage_users">נהל משתמשים</string>
    <string name="title_map">מפה</string>
    <string name="add_picture">הוספת תמונה</string>

    <!-- Chat -->
    <string name="title">Chat Group</string>
    <string name="btn_send">Send</string>
    <string name="title_activity_chat_group">ChatGroupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_image">logo_image</string>
    <string name="check_me">Check Me</string>
</resources>
