<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_purple_light"
    tools:context="com.sadna.app.checkme.activities.PhoneVerificationSendActivity">


  <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/holo_pink_light"
        android:minHeight="?attr/actionBarSize"
        android:weightSum="1">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_alignParentStart="true">
        <ImageView
            android:id = "@+id/logo"
            android:layout_width="55dp"
            android:contentDescription="logo_image"
            android:layout_height="55dp"
            android:src="@drawable/check_me_logo"
            android:layout_gravity="left|center"
            android:layout_marginTop="10dp"
            tools:ignore="RtlHardcoded"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toolbarText"
                android:textColor="@color/holo_purple_dark"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/phone_verification_toolbar"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_gravity = "right|center"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/logo"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/send_sms_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="180dp"
        android:background="@color/holo_purple_new"
        android:textColor="@color/holo_white"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/send_sms"
        android:onClick="sendSmsAndMoveToVerifyActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="79dp"
        android:layout_marginStart="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/phone_verification_subtitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_purple_dark"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_marginTop="50dp" />

        <EditText
            android:id="@+id/phone_number_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType=""
            android:maxLength="10"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="top|center_horizontal"
            android:gravity="center"
            android:text="@string/phone_verification_body"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_purple_dark"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:typeface="sans"
            android:layout_marginTop="60dp"
            android:layout_weight="0.17" />

    </LinearLayout>

</RelativeLayout>
